# rhyolite

./: .gitignore  .hlint.yaml  CONTRIBUTING.md  ChangeLog.md  LICENSE  README.md  cabal.project  default.nix  gen-docs.sh  overlay.nix  release.nix
account/backend/: rhyolite-account-backend.cabal
account/backend/src/Rhyolite/Backend/: Account.hs
account/frontend/: rhyolite-account-frontend.cabal
account/frontend/src/Rhyolite/Frontend/: Account.hs
account/types/: rhyolite-account-types.cabal
account/types/src/Rhyolite/: Account.hs
aeson-orphans/: obelisk-aeson-orphans.cabal  rhyolite-aeson-orphans.cabal
aeson-orphans/src/Obelisk/Aeson/: Orphans.hs
aeson-orphans/src/Rhyolite/Aeson/: Orphans.hs
backend/: rhyolite-backend.cabal
backend-db/: rhyolite-backend-db.cabal
backend-db-gargoyle/: rhyolite-backend-db-gargoyle.cabal
backend-db-gargoyle/Rhyolite/Backend/DB/: Gargoyle.hs
backend-db/Database/Groundhog/Postgresql/: Orphans.hs
backend-db/Network/PushNotification/: Worker.hs
backend-db/Rhyolite/Backend/: DB.hs  Schema.hs  TaskWorker.hs
backend-db/Rhyolite/Backend/DB/: LargeObjects.hs  PsqlSimple.hs  Serializable.hs  TH.hs
backend-db/Rhyolite/Backend/DB/PsqlSimple/: Orphans.hs
backend-db/Rhyolite/Backend/Schema/: Class.hs  TH.hs  Task.hs
backend-notification-postgres/: rhyolite-backend-notification-postgres.cabal
backend-notification-postgres/Rhyolite/Backend/: Listen.hs
backend-snap/: rhyolite-backend-snap.cabal
backend-snap/Rhyolite/Backend/: Snap.hs
backend/Rhyolite/: Backend.hs
backend/Rhyolite/Backend/: Account.hs  App.hs  DB.hs  Email.hs  EmailWorker.hs  HaveIBeenPwned.hs  Listen.hs  Logging.hs  Schema.hs  Sign.hs  TH.hs  Vessel.hs  WebSocket.hs  Which.hs
backend/Rhyolite/Backend/DB/: LargeObjects.hs  PsqlSimple.hs
backend/Rhyolite/Backend/Listen/: Typed.hs
backend/Rhyolite/Backend/Schema/: Class.hs  TH.hs
beam/: README.md  rhyolite-beam-task-worker.cabal  rhyolite-beam.cabal
beam/db/: LICENSE  rhyolite-beam-db.cabal
beam/db/src/Rhyolite/DB/: Beam.hs
beam/orphans/: rhyolite-beam-orphans.cabal
beam/src/Rhyolite/DB/: Beam.hs
beam/src/Rhyolite/Db/: Beam.hs
beam/src/Rhyolite/Task/: Beam.hs
beam/src/Rhyolite/Task/Beam/: Worker.hs
beam/task/backend/: rhyolite-beam-task-worker-backend.cabal
beam/task/backend/test/: Test.hs  Types.hs  Utils.hs
beam/task/types/: rhyolite-beam-task-worker-types.cabal
beam/test/: Test.hs  Types.hs
common/: default.nix  rhyolite-common.cabal
common/Data/: MonoidMap.hs
common/Data/Aeson/: GADT.hs
common/Data/Vessel/: Void.hs
common/Rhyolite/: Account.hs  Api.hs  App.hs  Concurrent.hs  Email.hs  HList.hs  HostSpecific.hs  Route.hs  Schema.hs  Sign.hs  TH.hs  WebSocket.hs
common/Rhyolite/Aeson/: Orphans.hs
common/Rhyolite/Request/: Class.hs  Common.hs  TH.hs
common/Rhyolite/Schema/: Task.hs
common/Rhyolite/Vessel/: App.hs  AuthMapV.hs  AuthenticatedV.hs  ErrorV.hs  Path.hs  Types.hs
common/Rhyolite/Vessel/ErrorV/: Internal.hs
datastructures/: rhyolite-datastructures.cabal
datastructures/src/Data/: TSum.hs
datastructures/src/Rhyolite/: AppendMap.hs  SemiMap.hs
datastructures/src/Rhyolite/Map/: Monoidal.hs
email/: CHANGELOG.md  email.css  rhyolite-email.cabal
email/mime-mail-orphans/: mime-mail-orphans.cabal
email/src/Rhyolite/: Email.hs
email/src/Rhyolite/Email/: Orphans.hs
entropy-class/: LICENSE  entropy-class.cabal
entropy-class/src/System/Entropy/: Class.hs
frontend/: rhyolite-frontend.cabal
frontend/Rhyolite/Frontend/: App.hs  Auth.hs  Cookie.hs  Form.hs  Placeholder.hs  Request.hs  WebSocket.hs  Widget.hs
frontend/Rhyolite/Frontend/Auth/: App.hs
frontend/Rhyolite/Frontend/FilePicker/: Dropbox.hs
frontend/Rhyolite/Frontend/JS/: Window.hs
frontend/Rhyolite/Frontend/Modal/: Base.hs  Class.hs
groundhog-legacy/: CHANGELOG.md  README.md  rhyolite-groundhog-legacy.cabal
groundhog-legacy/groundhog-legacy/: README.md  rhyolite-groundhog-legacy.cabal
groundhog-legacy/groundhog-legacy-types/: CHANGELOG.md  rhyolite-groundhog-legacy-types.cabal
groundhog-legacy/groundhog-legacy-types/src/Rhyolite/: Account.hs  Schema.hs
groundhog-legacy/groundhog-legacy/src/Rhyolite/Account/: Groundhog.hs
groundhog-legacy/groundhog-legacy/src/Rhyolite/DB/: Groundhog.hs
groundhog-legacy/groundhog-legacy/src/Rhyolite/Task/: Groundhog.hs
groundhog-legacy/src/Database/PostgreSQL/NotifyListen/: Groundhog.hs
groundhog-legacy/src/Rhyolite/DB/Groundhog/: Orphans.hs  Schema.hs  Serializable.hs
groundhog-legacy/src/Rhyolite/DB/NotifyListen/: Groundhog.hs
groundhog-legacy/src/Rhyolite/Network/PushNotification/: Worker.hs
iv/backend/: iv-backend.cabal
iv/backend/src/Obelisk/: Api.hs  Beam.hs  Concurrency.hs  Db.hs
iv/backend/src/Obelisk/Beam/: BeamWrap.hs  Misc.hs
iv/backend/src/Obelisk/Db/: LiveQuery.hs
iv/backend/src/Obelisk/Postgres/: Replication.hs  Snapshot.hs
iv/backend/src/Obelisk/View/: App.hs  Postgres.hs  Sequential.hs
iv/common/: dev.ghci  iv-common.cabal
iv/common/src/Data/Constraint/: Empty.hs
iv/common/src/Obelisk/Beam/: BLens.hs  Constraints.hs  Constructor.hs  DZippable.hs  Orphans.hs  Schema.hs  TablesOnly.hs  TablesV.hs  Traversals.hs
iv/common/src/Obelisk/Common/: Schema.hs
iv/common/src/Obelisk/Reflex/: Orphans.hs
iv/common/src/Obelisk/Schema/: NullableScalar.hs  NullableSubRow.hs  Scalar.hs  TH.hs
iv/common/src/Obelisk/View/: Collidable.hs  Coverable.hs  Coverage.hs  CoverageMap.hs  Data.hs  Debug.hs  DefMap.hs  Fan.hs  Interface.hs  IvMonad.hs  Misc.hs  NonEmptyInterval.hs  OccurrenceMap.hs  Orphans.hs  Patchable.hs  SubscriptionMap.hs  These1.hs  Time.hs  Vessel.hs
logging/: rhyolite-logging.cabal
logging/Rhyolite/: Logging.hs
postgresql-simple-class/: CHANGELOG.md  postgresql-simple-class.cabal
postgresql-simple-class/src/Database/PostgreSQL/Simple/: Class.hs
semimap/: semimap.cabal
semimap/src/Rhyolite/: SemiMap.hs
test/: rhyolite-test-suite.cabal
test/src-bin/: test.hs
widgets/: CHANGELOG.md  rhyolite-widgets.cabal
widgets/src/Reflex/Dom/Modal/: Base.hs  Class.hs
(+90 files in other folders)
