Name: rhyolite-aeson-orphans
Version: 0.1
Synopsis: Orphan Aeson instances for various types
License: BSD3
Author: Obsidian Systems LLC
Maintainer: maintainer@obsidian.systems
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

library
  hs-source-dirs: src

  build-depends: base
               , aeson
               , bytestring
               , base64-bytestring
               , containers
               , reflex
               , reflex-aeson-orphans
               , text

  exposed-modules: Rhyolite.Aeson.Orphans

  other-extensions: TemplateHaskell
  ghc-options: -threaded -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls -rtsopts
