Name: rhyolite-aeson-orphans
Version: 0.1
Synopsis: Orphan Aeson instances for various types
License: BSD3
Author: Obsidian Systems LLC
Maintainer: maintainer@obsidian.systems
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

library
  hs-source-dirs: src

  build-depends:
      aeson
    , base
    , base64-bytestring
    , bytestring
    , containers
    , reflex
    , text

  exposed-modules: Rhyolite.Aeson.Orphans

  other-extensions: TemplateHaskell
  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls
