name: rhyolite-backend-db
version: 0.1
license: BSD3
copyright: Copyright (C) Obsidian Systems LLC 2018
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
stability: Experimental
build-type: Simple
cabal-version: >=1.2

library
  hs-source-dirs: .

  build-depends:
      aeson
    , async
    , base
    , bytestring
    , containers
    , groundhog
    , groundhog-postgresql
    , groundhog-th
    , io-streams
    , lens
    , lifted-base
    , monad-control
    , monad-logger
    , monad-loops
    , monoidal-containers
    , mtl
    , postgresql-simple
    , postgresql-lo-stream
    , resource-pool
    , rhyolite-common
    , template-haskell
    , text
    , time
    , transformers
    , unbounded-delays
    , universe

  exposed-modules:
    Database.Groundhog.Postgresql.Orphans
    Rhyolite.Backend.DB
    Rhyolite.Backend.DB.LargeObjects
    Rhyolite.Backend.DB.PsqlSimple
    Rhyolite.Backend.DB.PsqlSimple.Orphans
    Rhyolite.Backend.DB.TH
    Rhyolite.Backend.TaskWorker
    Rhyolite.Backend.Schema
    Rhyolite.Backend.Schema.Class
    Rhyolite.Backend.Schema.Task
    Rhyolite.Backend.Schema.TH

  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls
