name: rhyolite-backend-db
version: 0.1
license: BSD3
copyright: Copyright (C) Obsidian Systems LLC 2018
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
stability: Experimental
build-type: Simple
cabal-version: >=1.2

library
  hs-source-dirs: .

  build-depends:
      aeson
    , async
    , base
    , bytestring
    , containers
    , database-id-class
    , database-id-groundhog
    , exceptions
    , groundhog
    , groundhog-postgresql
    , groundhog-th
    , http-conduit
    , io-streams
    , lens
    , lifted-base
    , monad-control
    , monad-logger
    , monad-loops
    , monoidal-containers
    , mtl
    , postgresql-simple
    , postgresql-lo-stream
    , push-notifications
    , resource-pool
    , rhyolite-common
    , rhyolite-logging
    , template-haskell
    , text
    , time
    , transformers
    , transformers-base
    , unbounded-delays
    , universe

  exposed-modules:
    Database.Groundhog.Postgresql.Orphans
    Network.PushNotification.Worker
    Rhyolite.Backend.DB
    Rhyolite.Backend.DB.LargeObjects
    Rhyolite.Backend.DB.PsqlSimple
    Rhyolite.Backend.DB.PsqlSimple.Orphans
    Rhyolite.Backend.DB.Serializable
    Rhyolite.Backend.TaskWorker
    Rhyolite.Backend.Schema
    Rhyolite.Backend.Schema.Class
    Rhyolite.Backend.Schema.Task
    Rhyolite.Backend.Schema.TH

  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls
