name: rhyolite-backend-db
version: 0.1
license: BSD3
copyright: Copyright (C) Obsidian Systems LLC 2018
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
stability: Experimental
build-type: Simple
cabal-version: >=1.2

library
  hs-source-dirs: .

  build-depends:
      aeson
    , async
    , base
    , bytestring
    , containers
    , database-id-class
    , database-id-groundhog
    , exceptions
    , groundhog
    , groundhog-postgresql
    , groundhog-th
    , http-conduit
    , io-streams
    , lens
    , lifted-base
    , monad-control
    , monad-logger-extras
    , monad-logger
    , monad-loops
    , monoidal-containers
    , mtl
    , postgresql-simple
    , psql-simple-class
    , psql-simple-groundhog
    , postgresql-lo-stream
    , postgresql-simple-interpolate
    , psql-serializable
    , push-notifications
    , resource-pool
    , rhyolite-common
    , rhyolite-groundhog-legacy
    , template-haskell
    , text
    , time
    , transformers
    , transformers-base
    , unbounded-delays
    , universe

  exposed-modules:
    Rhyolite.Backend.TaskWorker
    Rhyolite.Backend.Schema.Task

  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls
