name: rhyolite-backend-notification-postgres
version: 0.1
license: BSD3
copyright: Copyright (C) Obsidian Systems LLC 2021
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
stability: Experimental
build-type: Simple
cabal-version: >=1.2
description: Notification mechanism using postgres.
library
  hs-source-dirs: .

  build-depends:
      aeson
    , base
    , bytestring
    , constraints
    , constraints-extras
    , dependent-sum
    , dependent-sum-aeson-orphans
    , postgresql-simple
    , rhyolite-backend-db
    , rhyolite-common
    , gargoyle-postgresql
    , gargoyle-postgresql-connect
    , resource-pool
    , split
    , stm
    , text

  exposed-modules:
    Rhyolite.Backend.Listen

  other-extensions: TemplateHaskell
  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls
