name: rhyolite-backend-snap
version: 0.1
license: BSD3
copyright: Copyright (C) Obsidian Systems LLC 2018
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
stability: Experimental
build-type: Simple
cabal-version: >=1.2

library
  hs-source-dirs: .

  build-depends:
      base
    , bytestring
    , data-default
    , diagrams
    , diagrams-lib
    , diagrams-svg
    , filepath
    , lens
    , lucid
    , obelisk-asset-serve-snap
    , obelisk-snap-extras
    , raw-strings-qq
    , snap
    , svg-builder
    , text

  exposed-modules:
    Rhyolite.Backend.Snap

  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls
