name: rhyolite-backend-snap
version: 0.1
license: BSD3
copyright: Copyright (C) Obsidian Systems LLC 2018
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
stability: Experimental
build-type: Simple
cabal-version: >=1.2

library
  hs-source-dirs: .

  build-depends: base
    , attoparsec
    , bytestring
    , io-streams
    , snap
    , snap-core

  exposed-modules:
    Rhyolite.Backend.Snap.Util.FileServe.Stream

  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls
