name:          rhyolite-backend
version:       0.1
license:       BSD3
copyright:     Copyright (C) Obsidian Systems LLC 2018
author:        Obsidian Systems LLC
maintainer:    maintainer@obsidian.systems
stability:     Experimental
build-type:    Simple
cabal-version: >=1.2
description:
  Rhyolite is a staging area of common patterns and implementations that
  Obsidian uses, before they are tested and polished enough to go into obelisk
  or the reflex family of packages.
  This package defines some common patterns, most of them adapted to use
  groundhog as the underlying db library.

library
  hs-source-dirs:   .
  build-depends:
      aeson
    , base
    , some
    , constraints
    , constraints-extras
    , lens
    , monoid-map
    , monoidal-containers
    , postgresql-simple
    , reflex
    , resource-pool
    , rhyolite-common
    , rhyolite-notify-listen
    , semialign
    , signed-data
    , signed-data-clientsession
    , snap-core
    , text
    , vessel
    , websockets
    , websockets-snap
    , witherable                   >=0.2 && <0.4

  exposed-modules:
    Rhyolite.Backend.App
    Rhyolite.Backend.WebSocket

  other-extensions: TemplateHaskell
  ghc-options:
    -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields
    -O2 -fprof-auto-calls
