name:          rhyolite-backend
version:       0.1
license:       BSD3
copyright:     Copyright (C) Obsidian Systems LLC 2018
author:        Obsidian Systems LLC
maintainer:    maintainer@obsidian.systems
stability:     Experimental
build-type:    Simple
cabal-version: >=1.2
synopsis:      Backend infrastructure to support FRP-based frontends
description:
  Rhyolite backends are designed to deliver live-updating data to reflex-powered applications.

library
  hs-source-dirs:   .
  build-depends:
      aeson
    , base
    , constraints
    , constraints-extras
    , lens
    , monoid-map
    , monoidal-containers
    , patch
    , postgresql-simple
    , reflex
    , resource-pool
    , rhyolite-common
    , rhyolite-notify-listen
    , semialign
    , signed-data
    , signed-data-clientsession
    , snap-core
    , some
    , text
    , vessel
    , websockets
    , websockets-snap
    , witherable

  exposed-modules:
    Rhyolite.Backend.App
    Rhyolite.Backend.WebSocket

  other-extensions: TemplateHaskell
  ghc-options:
    -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields
    -O2 -fprof-auto-calls
