cabal-version:      2.4
name:               rhyolite-beam
version:            0.1.0.0
synopsis:           Beam based task workers.
homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:        https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2021 Obsidian Systems LLC
category:           Web
extra-source-files: README.md

library
  exposed-modules:
    Rhyolite.DB.Beam
    Rhyolite.Task.Beam
    Rhyolite.Task.Beam.Worker

  build-depends:
      async
    , base
    , beam-core
    , beam-postgres
    , lifted-base
    , monad-logger
    , monad-logger-extras
    , monad-control
    , mtl
    , postgresql-simple
    , psql-serializable
    , text
    , time
    , unbounded-delays

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
