name: rhyolite-datastructures
version: 0.1
synopsis: Pure datastructures
license: BSD3
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
stability: Experimental
category: Web
build-type: Simple
cabal-version: >=1.2
description:
  Rhyolite is a staging area of common patterns and implementations that
  Obsidian uses, before they are tested and polished enough to go into obelisk
  or the reflex family of packages.

  This package mostly defines the concepts of SemiMap and SemiSet.


library
  hs-source-dirs: src

  build-depends:
      aeson
    , base
    , containers
    , data-default
    , lens
    , monoidal-containers
    , mtl
    , reflex
    , rhyolite-aeson-orphans
    , these

  exposed-modules:
    Rhyolite.Map.Monoidal
    Rhyolite.SemiMap

  other-extensions: TemplateHaskell
  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls
