cabal-version:      2.4
name:               rhyolite-email
version:            0.1.0.0
synopsis:           Send emails from rhyolite applications
homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:        https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright: 2021 Obsidian Systems LLC
category:           Web
extra-source-files: CHANGELOG.md
                    email.css

library
    exposed-modules:  Rhyolite.Email
    build-depends:    base
      , HaskellNet
      , HaskellNet-SSL
      , aeson
      , signed-data
      , data-default
      , mime-mail
      , monad-logger
      , mtl
      , network
      , smtp-mail
      , text
      , time
      , timerep
      , transformers
      , blaze-html
      , obelisk-route
      , reflex-dom-core
      , reflex
      , file-embed

      , rhyolite-common
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
