cabal-version:      2.4
name:               entropy-class
version:            0.1.0.0
synopsis:           Typeclass for retrieving cryptographic entropy
description:
  Retrieve cryptographic entropy in monads other than IO

homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:        https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2024 Obsidian Systems LLC
category:           Data

library
  exposed-modules:
    System.Entropy.Class
  build-depends:
      base
    , bytestring
    , entropy
    , mtl

  hs-source-dirs: src
  default-language: Haskell2010
