name: rhyolite-frontend
version: 0.1
license: BSD3
copyright: Copyright (C) Obsidian Systems LLC 2018
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
stability: Experimental
build-type: Simple
cabal-version: >=1.2

library
  hs-source-dirs: .

  if impl(ghcjs)
    build-depends:
      ghcjs-base

  build-depends:
      aeson
    , base
    , bifunctors
    , binary
    , bytestring
    , constraints
    , containers
    , cookie
    , data-default
    , dependent-map
    , dependent-sum
    , either
    , exception-transformers
    , filepath
    , font-awesome-type
    , ghcjs-dom
    , http-types
    , jsaddle
    , lens
    , mmorph
    , monad-control
    , mtl
    , network-uri
    , obelisk-route
    , prim-uniq
    , primitive
    , raw-strings-qq
    , ref-tf
    , reflex
    , reflex-dom-core
    , rhyolite-common
    , safe
    , semigroups
    , template-haskell
    , text
    , these
    , time
    , timezone-olson
    , timezone-series
    , transformers
    , transformers-base
    , vector
    , validation
    , witherable >= 0.2 && < 0.4

  exposed-modules:
    Rhyolite.Frontend.App
    Rhyolite.Frontend.Cookie
    Rhyolite.Frontend.Form
    Rhyolite.Frontend.WebSocket
    Rhyolite.Frontend.Widget

  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls -rtsopts -fexpose-all-unfoldings
