name:          rhyolite-frontend
version:       0.1
license:       BSD3
copyright:     Copyright (C) Obsidian Systems LLC 2018
author:        Obsidian Systems LLC
maintainer:    maintainer@obsidian.systems
stability:     Experimental
build-type:    Simple
cabal-version: >=1.2
synopsis:      Build apps that use a rhyolite backend as a datasource
description:
  Rhyolite frontend apps are typically obelisk- and reflex-based applications that need live-updating data from the backend. This package provides the adapters necessary to work with requests and streaming data from a rhyolite backend.

library
  hs-source-dirs:  .

  if impl(ghcjs -any)
    build-depends: ghcjs-base

  build-depends:
      aeson
    , base
    , bytestring
    , constraints
    , constraints-extras
    , containers
    , cookie
    , data-default
    , either
    , exception-transformers
    , ghcjs-dom
    , jsaddle
    , lens
    , mtl
    , network-uri
    , obelisk-executable-config-lookup
    , obelisk-frontend
    , obelisk-route
    , primitive
    , ref-tf
    , reflex
    , reflex-dom-core
    , rhyolite-common
    , some
    , text
    , time
    , transformers
    , validation
    , vessel
    , witherable                        >=0.2 && <0.4

  exposed-modules:
    Rhyolite.Frontend.App
    Rhyolite.Frontend.Cookie

  ghc-options:
    -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields
    -O2 -fprof-auto-calls -fexpose-all-unfoldings
