cabal-version:      2.4
name:               rhyolite-groundhog-legacy
version:            0.1.0.0
synopsis:           Legacy adapter for groundhog-based rhyolite projects
homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:        https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2021 Obsidian Systems LLC
category:           Web
extra-source-files: README.md

library
  exposed-modules:  Rhyolite.DB.NotifyListen.Groundhog
                    Rhyolite.DB.Groundhog.Orphans
  build-depends:
    , aeson
    , base
    , constraints
    , constraints-extras
    , database-id-class
    , database-id-groundhog
    , groundhog
    , groundhog-postgresql
    , rhyolite-notify-listen
    , postgresql-simple
    , psql-simple-class
    , resource-pool
    , rhyolite-backend-db
    , stm
    , these

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
