cabal-version:      2.4
name:               postgresql-simple-class
version:            0.1.0.0
synopsis:           A typeclass for postgresql-simple
description:
  Typeclass and instances for database queries using postgresql-simple

homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:        https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2021 Obsidian Systems LLC
category:           Database
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Database.PostgreSQL.Simple.Class
  build-depends:
    , base
    , bytestring
    , mtl
    , postgresql-simple
    , transformers

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall
