name: rhyolite-test-suite
version: 0.1
synopsis: Tests for rhyolite
license: BSD3
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
stability: Experimental
category: Web
build-type: Simple
cabal-version: >=1.2

executable rhyolite-test-suite
  hs-source-dirs: src-bin
  main-is: test.hs
  build-depends: base
               , bytestring-aeson-orphans
               , rhyolite-backend
               , rhyolite-common
               , semimap
               , rhyolite-frontend
               , rhyolite-email
               , rhyolite-groundhog-legacy
               , rhyolite-groundhog-legacy-types
               , rhyolite-notify-listen
               , rhyolite-notify-listen-beam
               , psql-simple-beam
               , psql-simple-class
               , psql-simple-groundhog
               , signed-data
               , signed-data-clientsession

  ghc-options: -threaded -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls -rtsopts
